// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders control with warning 1`] = `
<EuiFormRow
  data-test-subj="inputControl0"
  describedByIds={Array []}
  display="row"
  fullWidth={false}
  hasEmptyLabelSpace={false}
  id="controlId"
  label={
    <React.Fragment>
      <EuiToolTip
        content="This is a warning"
        delay="regular"
        position="top"
      >
        <EuiIcon
          type="alert"
        />
      </EuiToolTip>
      test control
    </React.Fragment>
  }
  labelType="label"
>
  <div>
    My Control
  </div>
</EuiFormRow>
`;

exports[`renders disabled control with tooltip 1`] = `
<EuiFormRow
  data-test-subj="inputControl0"
  describedByIds={Array []}
  display="row"
  fullWidth={false}
  hasEmptyLabelSpace={false}
  id="controlId"
  label="test control"
  labelType="label"
>
  <EuiToolTip
    content="I am disabled for testing purposes"
    delay="regular"
    placement="top"
    position="top"
  >
    <div>
      My Control
    </div>
  </EuiToolTip>
</EuiFormRow>
`;

exports[`renders enabled control 1`] = `
<EuiFormRow
  data-test-subj="inputControl0"
  describedByIds={Array []}
  display="row"
  fullWidth={false}
  hasEmptyLabelSpace={false}
  id="controlId"
  label="test control"
  labelType="label"
>
  <div>
    My Control
  </div>
</EuiFormRow>
`;
